# MINST_C

./: CMakeLists.txt  MINST_C.c  MINST_C.cpp  MINST_C.h  README.md  com_arr.py  devices_info.txt  mnist.py  net.py  pytorch_onnx.py  requirements.txt  uart_com.py
